tooling/nargo_cli/tests/snapshots/execution_success/brillig_constant_reference_regression/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [u32; 2]):
    (no terminator instruction)
}
